Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jun 24 13:22:41 2015 +0200

	Added function definitions to SensitivityPlot.h.

	+  std::vector<double> m_bin_error;
	+  SensitivityPlot(const std::string &, const std::string &);
	+  void CalculateBinError();
	+  void WriteCutsToFile(double, const std::string &, const
	std::string &);
	+  void DoSensitivityPlot(const std::string &, const
	std::string &, const std::string &);

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jun 24 12:27:34 2015 +0200

	Modified RunFactory() signature in SensitivityCuts.h.

	-  void RunFactory(std::string, std::string);
	+  void RunFactory(std::string, std::vector<std::string>);
	+  void RunFactory(std::string, std::vector<std::string>);

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jun 24 12:24:48 2015 +0200

	Modified selection cuts in MiniReaderSelectionCuts.h.

	Modified the number of jet cut in the ZnunuCuts namespace to
	account for the	requirement of having less than 4 jets.

Author: Gabriele Bertoli <gbertoli@cern.ch>
	Date:   Wed Jun 24 10:42:03 2015 +0200

	Removed no more existing branches from MiniReaderPrimaryVertex.h.

	Removed

	std::vector<double> *m_pvtx_x;
	std::vector<double> *m_pvtx_y;
	std::vector<double> *m_pvtx_ndof;
	std::vector<double> *m_pvtx_chi2;

	as the corresponding branches are no more in the TTree.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Wed Jun 24 10:30:46 2015 +0200

	Removed no more existing branches from MiniReaderElectrons.h

	Removed

	std::vector<double> *m_ele_topoetcone_corr30;
	std::vector<double> *m_ele_topoetcone_corr40;

	because the branches no more exist in the tree.

22-05-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Implementing automatic naming for output files in the
	  Sensitivity studies
	* Fixing weight problem for the D5 sample

21-05-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Adding TMVA classes for sensitivity studies
	* Adding jet efficiency plots as function of mu