@@ -1,4 +1,12 @@
 Author: Gabriele Bertoli <gbertoli@cern.ch>
+Date:   Wed Jun 24 13:25:04 2015 +0200
+
+	Changing to non deprecated memeber functions in
+	MiniReaderAlg.cxx.
+
+	Using now castString() to check the data set name.
+
+Author: Gabriele Bertoli <gbertoli@cern.ch>
 Date:   Wed Jun 24 13:22:41 2015 +0200
 
 	Added function definitions to SensitivityPlot.h.
